# livevehiclepos_service

./: 2024-04-20_14-25-40.pos.json  Cargo.toml  README.md  Rocket.toml  sim_vehicle.json  vehicle-16-1.pos.json  vehicle-23-2.pos.json
retro/: 2024-05-17_19-41-40-23-olivaer-barmbek.pos  2024-05-17_19-55-04-7-barmbek-langenfort.pos  2024-05-18_17-25-42-7-langenfort-barmbek.pos  2024-05-18_17-37-18-23-barmbek-laemmersieth.pos
src/: main.rs
src/admin/: service.rs
src/positions/: model.rs  service.rs
src/simulation/: model.rs  simulation.rs
