[package]
name = "livevehiclepos_service"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.2"
crypto = "0.5.1"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0"
raw-string = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
